arreglo las flechas del carrusel, la sincronización de las barras de vida con los ataques, añado un favicon

--- a/Proyectos_python/VSCode/Fantasy_Smash/templates/ranking.html
+++ b/Proyectos_python/VSCode/Fantasy_Smash/templates/ranking.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Press Start 2P" rel="stylesheet"> 
     <link href="https://fonts.cdnfonts.com/css/gumball" rel="stylesheet">
+
+    <link rel="icon" type="image/png" href="/static/images/f-logo.png">
+    <link rel="shortcut icon" type="image/png" href="/static/images/f-logo.png">
 </head>
 <body>
     <div class="container">
