--- a/Proyectos_python/VSCode/Fantasy_Smash/templates/index.html
+++ b/Proyectos_python/VSCode/Fantasy_Smash/templates/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Press Start 2P" rel="stylesheet"> 
     <link href="https://fonts.cdnfonts.com/css/gumball" rel="stylesheet">
+
+    <link rel="icon" type="image/png" href="/static/images/f-logo.png">
+    <link rel="shortcut icon" type="image/png" href="/static/images/f-logo.png">
+    
 </head>
 <body>
     <div class="container">
@@ -102,7 +106,7 @@
                             <p>Has sido derrotado</p>
                             <div class="game-over-controls">
                                 <button onclick="window.location.reload()" class="restart-button">
-                                    Volver a Jugar
+                                    Volver a Inicio
                                 </button>
                             </div>
                         </div>
@@ -114,7 +118,7 @@
                             <p>Has completado todas las batallas</p>
                             <div class="game-over-controls">
                                 <button onclick="window.location.reload()" class="restart-button">
-                                    Jugar de Nuevo
+                                    Volver a Inicio
                                 </button>
                             </div>
                         </div>
